Wed Aug  1 12:14:17 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_dirent.h:
          Oops... Once again.

Wed Aug  1 11:58:02 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_dirent.h:
          Fixed macro logic error once again.

Wed Aug  1 09:50:51 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_dirent.h:
          Fixed macro logic error.

Wed Aug  1 08:08:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Config.h:
          Removed not needed semi colon

Wed Aug  1 08:01:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Config.h (cleanup):
          Changed argument to ptr, fixes some problems with BCB

Wed Aug  1 07:39:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace_wchar.h:
          Deprecated ACE_LIB_TEXT. Users can still use it, but not anymore
          in the code that is in the distribution

Wed Aug  1 07:30:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/drwho/Multicast_Manager.cpp:
        * apps/drwho/Options.cpp:
          Removed not needed fuzz disable statements

Wed Aug  1 07:29:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/lib/Time_Request_Reply.cpp:
        * protocols/tests/HTBP/Reactor_Tests/test_config.h
          Replaced ACE_LIB_TEXT with ACE_TEXT

Wed Aug  1 07:27:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Config.h:
          Fixed argument not used warning

        * apps/JAWS/clients/Blobby/Blob_Handler.cpp:
          Removed ACE_LIB_TEXT in comment

        * bin/fuzz.pl:
          Removed exception fuzz check. We have deprecated ACE_THROW

        * contrib/FaCE/FaCE.cpp:
        * contrib/FaCE/FaCE.h:
        * examples/ASX/Event_Server/Event_Server/Options.cpp:
        * examples/ASX/UPIPE_Event_Server/Options.cpp:
        * tests/Bug_2609_Regression_Test.cpp:
        * tests/Bug_2610_Regression_Test.cpp:
        * tests/Config_Test.cpp: