@@ -150,14 +150,17 @@ public:
 /// 2980 for a description of a test case where ACE_TSS::cleanup() is
 /// called before ~ACE_Object_Manager.
 
-/// Note that Borland C++ 2007 *needs* the parameter name, but I don't
-/// know why ...
-
-template<> inline void
-ACE_TSS<ACE_Service_Gestalt>::cleanup (void*ptr)
-{
-  ACE_UNUSED_ARG (ptr);
-}
+ACE_MT (
+		// Since ACE_TSS<>::cleanup() is only defined in 
+		// multithreaded builds ...
+		template<> inline void
+		ACE_TSS<ACE_Service_Gestalt>::cleanup (void*ptr)
+		{
+			// Borland C++ 2007 *needs* the parameter 
+			// name, but it is not clear why ...
+			ACE_UNUSED_ARG (ptr);
+		}
+); // ACE_MT
 
 
 /**
